<resources>
    <string name="app_name">RenewPass</string>
    <string name="action_settings">Settings</string>
    <string name="button_renew">Renew UPass</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="preference_header_general">General</string>
    <string name="preference_username">Username</string>
    <string name="preference_username_description">The username associated with your school account</string>
    <string name="preference_password">Password</string>
    <string name="preference_password_description">The password associated with your school account</string>
    <string name="available_notification_title">UPass Auto-Renew Success</string>
    <string name="available_notification_expanded_text">Your UPass has been successfully renewed! You\'re all set for the next month.</string>
    <string name="available_notification_short_text">You\'re all set for the next month.</string>
    <string name="unavailable_notification_title">UPass Auto-Renew Error</string>
    <string name="unavailable_notification_expanded_text">There was an error trying to auto-renew your UPass. We\'ll try to renew it again tomorrow.</string>
    <string name="unavailable_notification_short_text">We\'ll try to renew it again tomorrow.</string>
    <string name="preference_header_autorenew">Automatic Renewal</string>
    <string name="preference_autorenewdate_title">Renewal Date</string>
    <string name="preference_autorenewdate_description">The day of the month to renew your UPass</string>
    <string name="preference_autorenewtime_title">Renewal Time</string>
    <string name="preference_autorenewtime_description">The time of day to renew your UPass</string>
    <string name="preference_autorenewenabled_title">Automatic Renewal</string>
    <string name="preference_autorenewenabled_description" />
    <string name="message_autorenew_disabled">You have disabled automatic renewal</string>
    <string name="message_autorenew_enabled">You will be updated on the %1$sth of every month. The next update is scheduled for %2$s</string>
    <string name="preference_dialog_button_positive">Set</string>
    <string name="preference_dialog_button_negative">Cancel</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="enter_credentials_prompt">To get started, enter your credentials</string>
    <string name="provider_hint">Select your school</string>
    <string name="app_welcome_description">Renew your U-pass with the press of a button</string>
    <string name="app_welcome">Welcome to RenewPass</string>
    <string name="error_school_selection">Please select a school</string>
    <string name="school_spinner_default">Select your school...</string>
    <string name="preference_school">School</string>
    <string name="preference_school_description">The post-secondary institution that your school account belongs to</string>
    <string name="preference_header_other">Other</string>
    <string name="preference_credits">Credits</string>
    <string name="preference_credits_description"><![CDATA[
    <b>Alex Land</b> - Lead Developer<br>
   <b>Aaryaman Girish</b> - Developer, Cappuccino Lover<br>
   <b>Trevor Clelland</b> - Developer, Stupid Question Answerer<br>
   <b>Evan Chisholm</b> - Developer, Thane<br>
   <b>Emre Erhan</b> - Developer, Dishwasher<br><br>
   <b>Huge thanks to our contributors:</b> Prayansh Srivastava, Eugene Shen, and Gordon Shieh<br><br>
   <b>Special thanks to testers:</b> Alfred Sin, Akshiv Bansal, Tina Ly, Umesh Dinkar, Manny Sangha, Stuart Harvey, Jacob Zhou and James Kao.<br><br>RenewPass was heavily inspired by <b>Alireza Alidousti\'s</b> upassbc library.]]>
    </string>
    <string name="privacy_notice">Your credentials are stored locally, only accessible by RenewPass, and your password is encrypted by default.</string>
    <string name="preference_licenses">Licenses</string>
    <string name="checkbox_show_password">Show password</string>
    <string name="preference_debug">Send debug log</string>
    <string name="school_select">Select your school</string>
    <string name="app_welcome_upgrade">Welcome back to RenewPass!</string>
    <string name="app_welcome_upgrade_description">We\'ve changed a few things around behind the scenes, so we need you to re-enter your credentials.</string>

    <!--Preference keys-->
    <!--IMPORTANT: These strings CANNOT CHANGE. Otherwise, preferences will be lost-->
    <string name="preference_key_username">Username</string>
    <string name="preference_key_password">Password</string>
    <string name="preference_key_School">School</string>
    <string name="preference_key_Reset">Reset</string>
    <string name="preference_key_autorenew_enabled">NotificationsEnabled</string>
    <string name="preference_key_autorenew_date">NotificationDate</string>
    <string name="preference_key_autorenew_time">NotificationTime</string>
    <string name="preference_key_autorenew_last_scheduled">NotificationLastScheduled</string>
    <string name="preference_key_key_alias">KeyAlias</string>
    <string name="preference_key_credits">Credits</string>
    <string name="preference_key_licenses">Licenses</string>
    <string name="preference_key_debug">Debug</string>
    <string name="preference_key_keys">KeysExist</string>
    <string name="preference_key_encrypted">PasswordEncrypted</string>
    <string name="preference_key_prevversion">PreviousVersion</string>
    
    <!-- Preference default values-->
    <string name="preference_value_notification_default_time">00:00</string>
    <string name="preference_value_notification_default_date">21</string>

    <string-array name="school_list">
        <item>SFU</item>
        <item>UBC</item>
        <item>BCIT</item>
        <!-- TODO: Un-comment Cap U, Langara, and Douglas when they are fixed-->
        <!--<item>Cap U</item>-->
        <!--<item>Langara</item>-->
        <!--<item>Douglas</item>-->
        <item>VCC</item>
        <item>NVIT</item>
        <item>Kwantlen</item>
        <item>Emily Carr</item>
    </string-array>

    <string-array name="date_list">
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>
</resources>