<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preference_header_general">

        <EditTextPreference
            android:key="@string/preference_key_username"
            android:title="@string/preference_username"
            android:summary="@string/preference_username_description"
            android:dialogTitle="@string/preference_username"
            android:inputType="text"/>

        <ca.alexland.renewpass.PasswordPreference
            android:key="@string/preference_key_password"
            android:title="@string/preference_password"
            android:summary="@string/preference_password_description"
            android:dialogTitle="@string/preference_password"
            android:inputType="textWebPassword"/>

        <ListPreference
            android:key="@string/preference_key_School"
            android:title="@string/preference_school"
            android:summary="@string/preference_school_description"
            android:dialogTitle="@string/preference_school"
            android:entries="@array/school_list"
            android:entryValues="@array/school_list"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_header_autorenew">

        <CheckBoxPreference
            android:key="@string/preference_key_autorenew_enabled"
            android:title="@string/preference_autorenewenabled_title"
            android:summary="@string/preference_autorenewenabled_description"/>

        <ListPreference
            android:key="@string/preference_key_autorenew_date"
            android:dependency="NotificationsEnabled"
            android:title="@string/preference_autorenewdate_title"
            android:entries="@array/date_list"
            android:entryValues="@array/date_list"
            android:defaultValue="@string/preference_value_notification_default_date"
            android:summary="@string/preference_autorenewdate_description"/>
        
        <ca.alexland.renewpass.TimePreference
            android:key="@string/preference_key_autorenew_time"
            android:dependency="NotificationsEnabled"
            android:title="@string/preference_autorenewtime_title"
            android:summary="@string/preference_autorenewtime_description"
            android:defaultValue="@string/preference_value_notification_default_time"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_header_other">

        <!--TODO: change these keys to string resources-->
        <Preference
            android:key="Credits"
            android:title="@string/preference_credits"/>

        <Preference
            android:key="Licenses"
            android:title="@string/preference_licenses"/>

        <Preference
            android:key="Debug"
            android:title="@string/preference_debug"/>

    </PreferenceCategory>

</PreferenceScreen>