<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/IntroStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip">

    <android.widget.TextView
        android:id="@+id/start_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:padding="14dip"
        android:text="@string/enter_credentials_prompt"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/til_padding">

        <EditText
            android:id="@+id/username_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/til_padding">

        <EditText
            android:id="@+id/password_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.widget.TextView
        android:id="@+id/school_selection_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dip"
        android:text="@string/school_select"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />


    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/scroll">
        <include
            layout="@layout/school_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </HorizontalScrollView>


</LinearLayout>